# goldpolish

./: .README.md.swp  .clang-tidy  README.md  azure-pipelines.yml  meson.build
scripts/: goldpolish  goldpolish-autoclean  goldpolish-make  goldpolish-mask  goldpolish-ntedit  goldpolish-polish-batch  goldpolish-reaper  goldpolish-target-extract-seq.py  goldpolish-target-post-processing.py  goldpolish-target-run-pipeline.smk  goldpolish-target-update-mapping.py  goldpolish-target.py  goldpolish-to-upper  goldrush-edit  goldrush-edit-autoclean  goldrush-edit-cleanup  goldrush-edit-make  goldrush-edit-mask  goldrush-edit-ntedit  goldrush-edit-polish-batch  goldrush-edit-reaper  goldrush-edit-to-upper  goldrush_edit_utils.py  meson.build
src/: build_index.cpp  build_targeted_bfs.cpp  common.cpp  common.hpp  fn_name.hpp  goldpolish_hold.cpp  goldpolish_targeted_bfs.cpp  goldrush_edit_hold.cpp  goldrush_edit_index.cpp  goldrush_edit_targeted_bfs.cpp  mappings.cpp  mappings.hpp  meson.build  seqindex.cpp  seqindex.hpp  utils.cpp  utils.hpp
subprojects/ntedit/: meson.build  ntedit.cpp
subprojects/ntedit/lib/: nthash.hpp
subprojects/sealer/: config.h  meson.build  sealer.cpp
subprojects/sealer/Align/: dialign.cpp  meson.build
subprojects/sealer/Assembly/: meson.build
subprojects/sealer/Bloom/: Bloom.h
subprojects/sealer/Common/: meson.build
subprojects/sealer/DataLayer/: meson.build
subprojects/sealer/Graph/: DefaultColorMap.h  DotIO.h  GraphUtil.h
subprojects/sealer/Konnector/: DBGBloom.h  DBGBloomAlgorithms.h
subprojects/sealer/dialign/: meson.build
tests/: goldpolish_target_minimap2_test.sh  goldpolish_target_ntlink_test.sh  goldpolish_target_test.sh  goldpolish_target_test_golden_path.fa  goldpolish_test.sh  goldrush_edit_test.sh  goldrush_test_golden_path.fa
tests/expected_files/: goldpolish_target_test_golden_path.targeted.gaps.expected.fa  goldpolish_target_test_golden_path.targeted.polished.expected.fa  goldrush_test_golden_path.goldpolish-polished_expected.fa
tests/expected_files/minimap2/: goldpolish_target_test_golden_path.targeted.gaps.goldpolished.expected.fa  goldpolish_target_test_golden_path.targeted.polished.expected.fa
tests/expected_files/ntlink/: goldpolish_target_test_golden_path.targeted.polished.expected.fa
