scripts = [
    'goldpolish_utils.py',
    'goldpolish',
    'goldpolish-autoclean',
    'goldpolish-make',
    'goldpolish-mask',
    'goldpolish-ntedit',
    'goldpolish-polish-batch',
    'goldpolish-reaper',
    'goldpolish-to-upper',
    'goldpolish-target.py',
    'goldpolish-target-run-pipeline.smk',
    'goldpolish-target-extract-seq.py',
    'goldpolish-target-update-mapping.py',
    'goldpolish-target-post-processing.py'
]

install_data(scripts, install_dir : 'bin')